--- a/index.html
+++ b/index.html
@@ -148,6 +148,32 @@
     </div>
   </section>
   <!-- =============== About ends ===================== -->
+  <!-- =============== choose destination starts ===================== -->
+  <section id="choose-destination">
+    <div class="container">
+      <p class="heading-normal-txt">CHOOSE YOUR DESTINATIONS</p>
+      <h2 class="headings">POPULAR TOURS</H2>
+      <div class="destination-wrapper">
+        <div class="tour-left-img">
+          <div class="lg-img">
+            <img src="/img/maldivs-1.jpg" alt="">
+            <div class="img-content">
+              <p>Maldiv Tours</p>
+            </div>
+          </div>
+        </div>
+        <div class="tour-right-img">
+          <div class="lg-img">
+            <img src="/img/itly-1.jpg" alt="">
+            <div class="img-content">
+              <p>Maldiv Tours</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- =============== choose destination ends ===================== -->
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script src="/js/script.js"></script>
   <script src="js/swiper.js"></script>
